--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,25 @@
 body {
 	font-family: helvetica;
 	margin: 0 auto;
-	max-width: 600px;
-	width: 100%;
+	padding: 0 23%;
 }
 
 nav ul {
 	list-style: none;
-	text-align: center;
+	padding: 0px 0px 15px 0px;
+	border-bottom: .5px solid #ccc;
 }
 
 nav li {
 	display: inline;
-	padding: 5px;
+	font-size: 20px;
+	padding: 0px 20px 0px 0px;
 }
 
 h1 {
 	font-size: 30px;
 	color: orange;
+	padding: 10px 0px 0px 0px;
 }
 
 h2 {
@@ -25,6 +27,7 @@ h2 {
 	font-weight: 300;
 	text-transform: uppercase;
 	letter-spacing: 1px;
+	line-height: 26px;
 }
 
 a {
@@ -37,6 +40,32 @@ p {
 	line-height: 30px;
 }
 
+p em {
+	font-style: italic;
+}
+
+.project_list {
+	list-style: none;
+	padding: 0px;
+}
+
+.project_list img {
+	width: 40%;
+	max-width: 300px;
+	padding: 0px 20px 20px 0px;
+	float: left;
+}
+
+.project_container {
+	display: inline-block;
+	width: 100%;
+}
+
+.project_text {
+	text-align: left;
+}
+
+
 footer {
 	text-align: center;
 	background-color: #333;
@@ -44,24 +73,24 @@ footer {
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	padding: 0px 25px;
 }
 
 footer p {
 	color: white; 
 	font-size: 16px;
 	text-transform: uppercase;
-	font-weight: 300;
 }
 
 footer ul {
 	list-style: none;
-	text-align: center;
 	padding: 5px;
 }
 
 footer li {
 	display: inline;
 	padding: 10px;
+	color: white;
 }
 
 footer a {
